# ITRTG-Generator-Event-Non-Linear-Optimization

./: .gitignore  CMakeLists.txt  Easter_2025_v1.cpp  Easter_2025_v2.cpp  Easter_2025_v3.cpp  Easter_2026.cpp  README.md  README.txt  Summer_2025_MultiThreading.cpp  Valentine_2026.cpp  update_from_screenshot.py
